{
    "name": "InputMap",
    "maps": [
        {
            "name": "ActionsMap",
            "id": "589eb487-da37-4e25-8093-001c9a6a99df",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "c6c5e297-f2e8-460b-bc75-6fb16ae7e8db",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "1021613b-9bab-4504-87e1-25aa31ec0b9a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseDelta",
                    "type": "Value",
                    "id": "b894763f-9d20-41f4-bbf6-9748e939c436",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "19a41cb0-ba93-4141-8fc6-101976500b1e",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "PcScheme",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2dVector",
                    "id": "0b5de3dc-6997-4405-a922-2be5b749b9af",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a534cd18-561d-4a73-bfae-c79168cdd672",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "PcScheme",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2c102250-c49a-4476-81d7-504efa66430e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "PcScheme",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3867e089-7fef-4680-b10f-ec1deac718f1",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "PcScheme",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "40a5c43b-4d6d-4821-b7a2-1ef775e0a4bd",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "PcScheme",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "99461ff7-8ab2-45c3-a869-57bb02b08cc5",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "PcScheme",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d7be098d-faf2-4dae-90ab-8e77d7908a52",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PcScheme",
            "bindingGroup": "PcScheme",
            "devices": []
        }
    ]
}